<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="appName">catgirlsare.sexy</string>

    <string name="login">Log in</string>
    <string name="username">Username</string>
    <string name="password">Password</string>

    <string name="home">Home</string>
    <string name="uploads">Uploads</string>
    <string name="logout">Log out</string>

    <string name="upload">Upload</string>
    <string name="select">Select a file</string>

    <string name="permissionRequired">The app is missing storage permissions</string>
    <string name="permissionGrant">Grant permissions</string>
    <string name="permissionCancel">Cancel</string>

    <string name="fileInvalid">The file is invalid</string>
    <string name="fileSizeLimitExceeded">The file is too large</string>
    <string name="fileNotFound">The file does not exist</string>

    <string name="uploadSuccessful">The file uploaded successfully</string>
    <string name="uploadFailed">The file upload failed</string>

    <string name="logoutMessage">Are you sure you want to log out?</string>
    <string name="logoutConfirm">Log out</string>
    <string name="logoutCancel">Cancel</string>

    <string name="showKey">Show API key</string>
    <string name="showKeyMessage">Your API key is %s</string>
    <string name="showKeyCopy">Copy</string>
    <string name="showKeyDismiss">Dismiss</string>
    <string name="showKeyCopyName">API key</string>
    <string name="showKeyCopyError">Could not copy the API key</string>

    <string name="toggleTheme">Toggle theme</string>
</resources>
