<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout
        android:id="@+id/content"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/bottomNavigation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout="@layout/login_fragment" />

    <android.support.constraint.ConstraintLayout
        android:id="@+id/bottomNavigation"
        android:layout_width="0dp"
        android:layout_height="@dimen/bottomNavSize"
        android:background="?attr/bottomNavigationBackground"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:visibility="visible">

        <ImageButton
            android:id="@+id/homeButton"
            android:layout_width="@dimen/bottomNavSize"
            android:layout_height="@dimen/bottomNavSize"
            android:background="?attr/bottomNavigationSelected"
            android:contentDescription="@string/home"
            app:layout_constraintEnd_toStartOf="@+id/uploadsButton"
            app:layout_constraintStart_toStartOf="parent" />

        <ImageButton
            android:id="@+id/uploadsButton"
            android:layout_width="@dimen/bottomNavSize"
            android:layout_height="@dimen/bottomNavSize"
            android:background="?attr/bottomNavigationBackground"
            android:contentDescription="@string/uploads"
            app:layout_constraintEnd_toStartOf="@+id/logoutButton"
            app:layout_constraintStart_toEndOf="@+id/homeButton" />

        <ImageButton
            android:id="@+id/logoutButton"
            android:layout_width="@dimen/bottomNavSize"
            android:layout_height="@dimen/bottomNavSize"
            android:background="?attr/bottomNavigationBackground"
            android:contentDescription="@string/logout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/uploadsButton" />

    </android.support.constraint.ConstraintLayout>

</android.support.constraint.ConstraintLayout>
